[package]
name = "bevy-demos"
version = "0.1.0"
authors = ["Darius Wiles <github@dariuswiles.com>"]
edition = "2021"

[dependencies]
bevy = { version = "0.10", features = ["dynamic_linking"] }
fastrand = "1.8"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for Bevy and other dependencies, but not for my code
[profile.dev.package."*"]
opt-level = 3
